--- a/GameFramework/GameFramework/GameFramework.vcxproj.filters
+++ b/GameFramework/GameFramework/GameFramework.vcxproj.filters
@@ -97,6 +97,9 @@
       <Filter>Scene</Filter>
     </ClInclude>
     <ClInclude Include="Player.h">
+      <Filter>GameObject\Character</Filter>
+    </ClInclude>
+    <ClInclude Include="Monster.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
@@ -147,6 +150,9 @@
       <Filter>Scene</Filter>
     </ClCompile>
     <ClCompile Include="Player.cpp">
+      <Filter>GameObject\Character</Filter>
+    </ClCompile>
+    <ClCompile Include="Monster.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
