--- a/GameFramework/GameFramework/GameFramework.vcxproj.filters
+++ b/GameFramework/GameFramework/GameFramework.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="Scene">
       <UniqueIdentifier>{b4f5fbdb-362a-4e40-b47f-7d1c7c4923d9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="GameObject\Character\Monsters">
+      <UniqueIdentifier>{77f110da-56c5-4283-97c1-f19abb1765e2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -99,11 +102,35 @@
     <ClInclude Include="Player.h">
       <Filter>GameObject\Character</Filter>
     </ClInclude>
-    <ClInclude Include="Monster.h">
-      <Filter>GameObject\Character</Filter>
-    </ClInclude>
     <ClInclude Include="Bullet.h">
       <Filter>GameObject\Character</Filter>
+    </ClInclude>
+    <ClInclude Include="STank.h">
+      <Filter>GameObject\Character\Monsters</Filter>
+    </ClInclude>
+    <ClInclude Include="MTank.h">
+      <Filter>GameObject\Character\Monsters</Filter>
+    </ClInclude>
+    <ClInclude Include="Boss.h">
+      <Filter>GameObject\Character\Monsters</Filter>
+    </ClInclude>
+    <ClInclude Include="LPlane.h">
+      <Filter>GameObject\Character\Monsters</Filter>
+    </ClInclude>
+    <ClInclude Include="LTank.h">
+      <Filter>GameObject\Character\Monsters</Filter>
+    </ClInclude>
+    <ClInclude Include="MCannon.h">
+      <Filter>GameObject\Character\Monsters</Filter>
+    </ClInclude>
+    <ClInclude Include="MPlane.h">
+      <Filter>GameObject\Character\Monsters</Filter>
+    </ClInclude>
+    <ClInclude Include="SPlane_1.h">
+      <Filter>GameObject\Character\Monsters</Filter>
+    </ClInclude>
+    <ClInclude Include="SPlane_2.h">
+      <Filter>GameObject\Character\Monsters</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -155,11 +182,35 @@
     <ClCompile Include="Player.cpp">
       <Filter>GameObject\Character</Filter>
     </ClCompile>
-    <ClCompile Include="Monster.cpp">
-      <Filter>GameObject\Character</Filter>
-    </ClCompile>
     <ClCompile Include="Bullet.cpp">
       <Filter>GameObject\Character</Filter>
+    </ClCompile>
+    <ClCompile Include="STank.cpp">
+      <Filter>GameObject\Character\Monsters</Filter>
+    </ClCompile>
+    <ClCompile Include="MTank.cpp">
+      <Filter>GameObject\Character\Monsters</Filter>
+    </ClCompile>
+    <ClCompile Include="SPlane_2.cpp">
+      <Filter>GameObject\Character\Monsters</Filter>
+    </ClCompile>
+    <ClCompile Include="SPlane_1.cpp">
+      <Filter>GameObject\Character\Monsters</Filter>
+    </ClCompile>
+    <ClCompile Include="MPlane.cpp">
+      <Filter>GameObject\Character\Monsters</Filter>
+    </ClCompile>
+    <ClCompile Include="MCannon.cpp">
+      <Filter>GameObject\Character\Monsters</Filter>
+    </ClCompile>
+    <ClCompile Include="LTank.cpp">
+      <Filter>GameObject\Character\Monsters</Filter>
+    </ClCompile>
+    <ClCompile Include="LPlane.cpp">
+      <Filter>GameObject\Character\Monsters</Filter>
+    </ClCompile>
+    <ClCompile Include="Boss.cpp">
+      <Filter>GameObject\Character\Monsters</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
