--- a/GameFramework/GameFramework/GameFramework.vcxproj.filters
+++ b/GameFramework/GameFramework/GameFramework.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClInclude Include="SPlane_3.h">
       <Filter>GameObject\Character\Monsters</Filter>
     </ClInclude>
+    <ClInclude Include="TestMonster.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameFramework.cpp">
@@ -217,6 +220,9 @@
     </ClCompile>
     <ClCompile Include="SPlane_3.cpp">
       <Filter>GameObject\Character\Monsters</Filter>
+    </ClCompile>
+    <ClCompile Include="TestMonster.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
