--- a/GameFramework/GameFramework/GameFramework.vcxproj
+++ b/GameFramework/GameFramework/GameFramework.vcxproj
@@ -23,13 +23,13 @@
     <ProjectGuid>{8A46B463-E27F-4F53-9B51-D4BDA591D125}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>GameFramework</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -169,6 +169,7 @@
     <ClInclude Include="MemoryPool.h" />
     <ClInclude Include="MPlane.h" />
     <ClInclude Include="MTank.h" />
+    <ClInclude Include="Panel.h" />
     <ClInclude Include="SPlane_1.h" />
     <ClInclude Include="SPlane_2.h" />
     <ClInclude Include="SPlane_3.h" />
@@ -202,6 +203,7 @@
     <ClCompile Include="MCannon.cpp" />
     <ClCompile Include="MPlane.cpp" />
     <ClCompile Include="MTank.cpp" />
+    <ClCompile Include="Panel.cpp" />
     <ClCompile Include="SPlane_1.cpp" />
     <ClCompile Include="SPlane_2.cpp" />
     <ClCompile Include="SPlane_3.cpp" />
@@ -219,6 +221,7 @@
     <ClCompile Include="TestMonster.cpp" />
     <ClCompile Include="TestScene.cpp" />
     <ClCompile Include="TimeManager.cpp" />
+    <ClCompile Include="Transform.cpp" />
     <ClCompile Include="UI.cpp" />
   </ItemGroup>
   <ItemGroup>
