--- a/GameFramework/GameFramework/GameFramework.vcxproj
+++ b/GameFramework/GameFramework/GameFramework.vcxproj
@@ -23,13 +23,13 @@
     <ProjectGuid>{8A46B463-E27F-4F53-9B51-D4BDA591D125}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>GameFramework</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v141</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -168,6 +168,7 @@
     <ClInclude Include="MainGame.h" />
     <ClInclude Include="MCannon.h" />
     <ClInclude Include="MemoryPool.h" />
+    <ClInclude Include="Missle.h" />
     <ClInclude Include="MPlane.h" />
     <ClInclude Include="MTank.h" />
     <ClInclude Include="Panel.h" />
@@ -203,6 +204,7 @@
     <ClCompile Include="LTank.cpp" />
     <ClCompile Include="MainGame.cpp" />
     <ClCompile Include="MCannon.cpp" />
+    <ClCompile Include="Missle.cpp" />
     <ClCompile Include="MPlane.cpp" />
     <ClCompile Include="MTank.cpp" />
     <ClCompile Include="Panel.cpp" />
